# serialize

./: CMakeLists.txt  main.cpp
.github/workflows/: ci.yml
src/: CMakeLists.txt  serialize.cxx  writer.cxx
src/endpoint/: endpoint.cxx  file_endpoint.cxx  stream_endpoint.cxx
tests/: CMakeLists.txt  file_endpoint_tests.cpp  stream_endpoint_tests.cpp
